compiler-core/src/parse/snapshots/gleam_core__parse__tests__reserved_test.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 681
expression: const test = 1
---
error: Syntax error
  ┌─ /src/parse/error.gleam:1:7
  │
1 │ const test = 1
  │       ^^^^ I was expecting a name here


